API more detailed game entry + doc
